--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <View
+        android:id="@+id/btn_refresh_location"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/view"
+        app:layout_constraintEnd_toEndOf="@id/tv_time_stamp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_accuracy" />
 
+    <com.google.android.material.imageview.ShapeableImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_margin="35dp"
+        android:src="@drawable/ic_app"
+        app:shapeAppearanceOverlay="@style/circleImageView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <TextView
@@ -21,6 +37,7 @@
         android:layout_marginStart="20dp"
         android:text="Accuracy: 5.1m"
         android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/tv_time_stamp"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -29,8 +46,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="Time: 12:22 AM 14/01/2022"
+        android:text="Time: 00:00 AM 00/00/0000"
         android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/tv_lat"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -39,8 +57,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="Lat: 18.134131"
+        android:text="Lat: 00.0000"
         android:textColor="@color/white"
+        android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@id/tv_lon"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -49,10 +68,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:text="Long: 100.134131"
+        android:text="Long: 00.000000"
         android:textColor="@color/white"
+        android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@id/tv_coors_sys"
         app:layout_constraintStart_toStartOf="parent" />
+
 
     <TextView
         android:id="@+id/tv_coors_sys"
@@ -60,8 +81,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="35dp"
-        android:text="Coordinate: WGS 84"
+        android:text="EPSG:4326 WGS84"
         android:textColor="@color/white"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@id/btn_take_photo"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -75,30 +97,38 @@
 
     <ImageView
         android:id="@+id/btn_take_photo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:background="@drawable/bg_circle"
         android:elevation="20dp"
+        android:padding="20dp"
         android:src="@drawable/ic_camera"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view"
         app:tint="@color/white" />
 
     <ImageView
         android:id="@+id/btn_switch_cam"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@color/white"
+        android:background="@drawable/bg_circle"
+        android:src="@drawable/ic_cameraswitch"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/btn_take_photo"
-        app:layout_constraintTop_toTopOf="@id/btn_take_photo" />
+        app:layout_constraintTop_toTopOf="@id/btn_take_photo"
+        app:tint="@color/white" />
 
-    <ImageView
-        android:id="@+id/btn_gallery"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/img_last"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:background="@color/white"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_app"
+        app:shapeAppearanceOverlay="@style/circleImageView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_take_photo"
         app:layout_constraintStart_toEndOf="@id/btn_take_photo"
